--- a/game/src/package.json
+++ b/game/src/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.5",
     "babel-loader": "^8.0.0",
+    "expose-loader": "^4.1.0",
     "phaser-webpack-loader": "^2.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
